# fast-stockmarket

./: Cargo.toml  README.md
src/: globals.rs  lib.rs  main.rs
src/api_handler/: classes.rs  handler.rs  mod.rs  request_classes.rs  response_classes.rs
src/classes/: mod.rs
src/classes/api/: mod.rs  request_classes.rs  response_classes.rs
src/classes/shared/: mod.rs  order.rs  transaction.rs
src/gui/: graph_canvas.rs
src/handlers/: api_handler.rs  mod.rs
src/kernel/: market.rs  mod.rs
src/kernel/agents/: digest_cycle.rs  mod.rs
src/kernel/agents/core/: clean_books.rs  compress_histories.rs  find_trades.rs  mod.rs  report_transactions.rs  update_stats.rs
src/kernel/agents/trend/: chaotic_trend_generator.rs  market_maker.rs  mod.rs
src/kernel/order_book/: book.rs  mod.rs  record.rs  stats.rs  tests.rs  tests_hist.rs
src/market/: book.rs  market.rs  mod.rs  order.rs  tests.rs
src/order_history/: history_buffer.rs  mod.rs  ob_stats.rs  tests.rs
src/timekeeper/: market_time.rs  mod.rs
src/trend_generator/: chaotic_trend_generator.rs  digest_cycle.rs  market_maker.rs  mod.rs
tests/: api_tests.rs  book_tests.rs  order_tests.rs
