[package]
name = "FSSM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
hashbrown = "0.11.2"
actix-web = "4"
phf = { version = "0.10.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-rt = "2.5"
statrs = "0.15.0"
ctrlc = "3.2.1"
plotters-iced = "0.10"
iced = { version = "0.12", features = ["canvas", "tokio"] }
plotters="0.3"
tailcall = "1.0.1"

[profile.dev]
opt-level = 3
