[package]
name = "fssm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
chrono = "0.4"
lazy_static = "1.4.0"
hashbrown = "0.11.2"
actix-web = "4"
actix-cors = "0.6"
phf = { version = "0.10.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-rt = "2.5"
statrs = "0.15.0"
once_cell = "1.10"
circular-buffer = { version = "0.1", features = [] }

[profile.dev]
opt-level = 3
